<resources>
    <string name="app_name">WorkOut App</string>
    <string name="image">Start Image</string>
    <string name="start">START</string>
    <string name="get_ready_for">Get Ready For</string>
    <string name="upcoming_exercise">Upcoming Exercise</string>
    <string name="end">END</string>
    <string name="tick">✔</string>
    <string name="congo">Congratulations!</string>
    <string name="statement">You have Finished the Workout!</string>
    <string name="finished">Finish</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="message_confirm">This will stop workout. you\'ve come this far, are you sure you want to quit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="calculate">Calculator</string>
    <string name="bmi_btn">BMI</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="height_in_kg">Height (in cm)</string>
    <string name="calculate_btn">Calculate</string>
    <string name="your_bmi">Your BMI</string>

</resources>