<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:padding="15dp"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercies"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:theme="@style/ToolBarTheme"
        android:layout_height="?android:attr/actionBarSize"
        android:titleTextColor="@color/colorPrime"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textSize="40sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarExercies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <FrameLayout
        android:id="@+id/centerCircularFrameLayout"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/item_circular_color_border"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:id="@+id/text_view_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold"
            android:text="@string/tick"
            android:gravity="center"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congo"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/centerCircularFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statement"
        android:textSize="23sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/congrats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/statement"
        android:layout_marginTop="25dp"
        android:text="@string/finished"
        android:textSize="20dp"
        />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="230dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/yoga_img"
        app:layout_constraintTop_toBottomOf="@id/btnFinish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>