<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        android:contentDescription="@string/image"
        android:src="@drawable/img_main_page"
        android:layout_width="match_parent"
        android:layout_height="220dp" />
    <FrameLayout
        android:id="@+id/frameLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_color_accent_border_background_ripple"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textColor="@color/colorPrime"
            android:textSize="@dimen/default_button_txtSize"
            android:textStyle="bold"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/bmiLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/historyLayout"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/item_cicular_color_accent_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_btn"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_txtSize"
            android:textStyle="bold"
            />
    </FrameLayout>
    <TextView
        android:id="@+id/text_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="@dimen/default_button_txtSize"
        android:textStyle="bold"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@id/bmiLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_history"
        android:text="@string/calculate"
        />

    <ImageView
        android:id="@+id/historyLayout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@id/bmiLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/history_btn"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/text_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textSize="@dimen/default_button_txtSize"
        android:textStyle="bold"
        android:layout_marginStart="82dp"
        app:layout_constraintTop_toBottomOf="@id/bmiLayout"
        app:layout_constraintStart_toStartOf="@id/text_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="History"
        />


</androidx.constraintlayout.widget.ConstraintLayout>