<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bmiActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bmiToolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        />

    <RadioGroup
        android:id="@+id/radioGroupId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bmiToolBar"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_bg"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/metricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/unit_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="Metric Units"
            android:textColor="@drawable/unit_tab_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <RadioButton
            android:id="@+id/usUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/unit_tab_selector"
            android:button="@null"
            android:checked="false"
            android:text="US Units"
            android:gravity="center"
            android:textColor="@drawable/unit_tab_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </RadioGroup>


    <LinearLayout
        android:id="@+id/MetricMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupId"
        android:visibility="visible"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/WeightInKg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor = "@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            android:layout_below="@id/radioGroupId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/textWeightKG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightInCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            app:boxStrokeColor = "@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/textHeightCM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/UsMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupId"
        android:visibility="invisible"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsWeightInPounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor = "@color/colorAccent"
            app:hintTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/textWeightPounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Weight (in pounds)"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/USHeightLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FeetLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="visible"
                app:boxStrokeColor = "@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/Feet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Feet"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/InchLayout"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:visibility="visible"
                app:boxStrokeColor = "@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/Inch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Inch"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/calcOutputLinear"
        android:layout_below="@id/UsMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible"
        >

        <TextView
            android:id="@+id/yourBmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/yourBmiValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="10"
            android:layout_marginTop="5dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/yourBmiType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            tools:text="Type"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/yourBmiDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            tools:text = "Description"
            android:textSize="18sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/calculate_btn"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@id/calcOutputLinear"
        />
</RelativeLayout>